--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newton-script.js",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Newton Script to JavaScript compiler.",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,8 @@
   "dependencies": {
     "esprima": "^1.1.1",
     "nopt": "^2.2.0"
+  },
+  "devDependencies": {
+    "pegjs": "~0.8.0"
   }
 }
